--- a/memo/advise/生成规则.md
+++ b/memo/advise/生成规则.md
@@ -5,11 +5,14 @@
 逻辑:
 1. 不希望把重写的内容和添加的内容修改
 所以行内修改在第一个
-2. 行后添加的内容不希望被重写,所以是先重写,
+2. 行后添加的内容不希望被重写,所以是先重写
+
 然后再添加
 3. 所以顺序暂时定为,行内修改,行内重写,行后添加
 
 1. 行内修改
 2. 行内重写
 3. 行后添加
+
+## ddf
 
